--- a/Check2Venmo/Base.lproj/Main.storyboard
+++ b/Check2Venmo/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14C68m" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,39 +18,34 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_5684" translatesAutoresizingMaskIntoConstraints="NO" id="ogB-eI-8NW">
-                                <rect key="frame" x="0.0" y="20" width="600" height="290"/>
+                                <rect key="frame" x="20" y="20" width="560" height="560"/>
+                                <color key="backgroundColor" red="1" green="0.20000000000000001" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ogB-eI-8NW" secondAttribute="height" multiplier="1:1" id="JTd-P2-AlY"/>
+                                </constraints>
                             </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ONA-ef-wLU">
-                                <rect key="frame" x="0.0" y="310" width="600" height="290"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="ONA-ef-wLU" secondAttribute="centerX" id="0zZ-ol-XU4"/>
-                            <constraint firstItem="ogB-eI-8NW" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="98L-Nt-siw"/>
-                            <constraint firstItem="ogB-eI-8NW" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="IaY-Yi-HEf"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="ONA-ef-wLU" secondAttribute="bottom" id="SC8-H0-KXo"/>
-                            <constraint firstItem="ONA-ef-wLU" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="SpC-pQ-ICt"/>
-                            <constraint firstItem="ONA-ef-wLU" firstAttribute="top" secondItem="ogB-eI-8NW" secondAttribute="bottom" id="ZQB-yI-8Ff"/>
-                            <constraint firstAttribute="trailing" secondItem="ogB-eI-8NW" secondAttribute="trailing" id="aue-wl-djI"/>
+                            <constraint firstItem="ogB-eI-8NW" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="kh9-bI-dsS" secondAttribute="leading" id="98L-Nt-siw"/>
+                            <constraint firstItem="ogB-eI-8NW" firstAttribute="top" relation="greaterThanOrEqual" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="IaY-Yi-HEf"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" relation="greaterThanOrEqual" secondItem="ogB-eI-8NW" secondAttribute="bottom" id="KDV-5b-Rpr"/>
+                            <constraint firstAttribute="centerY" secondItem="ogB-eI-8NW" secondAttribute="centerY" id="Yqg-cW-bRX"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ogB-eI-8NW" secondAttribute="trailing" id="aue-wl-djI"/>
                             <constraint firstItem="ogB-eI-8NW" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="eMa-KD-BCL"/>
                             <constraint firstAttribute="centerX" secondItem="ogB-eI-8NW" secondAttribute="centerX" id="jXK-GN-l4e"/>
-                            <constraint firstItem="ONA-ef-wLU" firstAttribute="height" secondItem="ogB-eI-8NW" secondAttribute="height" id="waW-Y1-bHr"/>
-                            <constraint firstAttribute="trailing" secondItem="ONA-ef-wLU" secondAttribute="trailing" id="xu3-WG-RCp"/>
+                            <constraint firstAttribute="centerX" secondItem="ogB-eI-8NW" secondAttribute="centerX" id="m5G-UB-ZU8"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="eMa-KD-BCL"/>
+                                <exclude reference="jXK-GN-l4e"/>
                             </mask>
                         </variation>
                     </view>
                     <connections>
                         <outlet property="imageView" destination="ogB-eI-8NW" id="f6D-ms-add"/>
-                        <outlet property="textView" destination="ONA-ef-wLU" id="mjy-dS-5Uk"/>
+                        <outlet property="ratioConstraint" destination="JTd-P2-AlY" id="2HS-5a-zGQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
