--- a/Check2Venmo/Base.lproj/Main.storyboard
+++ b/Check2Venmo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="NIv-Wh-O8p">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -14,42 +14,65 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_5684" translatesAutoresizingMaskIntoConstraints="NO" id="ogB-eI-8NW">
-                                <rect key="frame" x="20" y="20" width="560" height="560"/>
-                                <color key="backgroundColor" red="1" green="0.20000000000000001" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ywn-EL-rna" userLabel="Container View">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_5684" translatesAutoresizingMaskIntoConstraints="NO" id="ogB-eI-8NW">
+                                        <rect key="frame" x="32" y="0.0" width="536" height="536"/>
+                                        <color key="backgroundColor" red="1" green="0.20000000000000001" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="ogB-eI-8NW" secondAttribute="height" multiplier="1:1" id="JTd-P2-AlY"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="ogB-eI-8NW" secondAttribute="height" multiplier="1:1" id="JTd-P2-AlY"/>
+                                    <constraint firstItem="ogB-eI-8NW" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ywn-EL-rna" secondAttribute="leading" id="3Wj-GG-ZJL"/>
+                                    <constraint firstAttribute="centerX" secondItem="ogB-eI-8NW" secondAttribute="centerX" id="3zD-ta-XeG"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="ogB-eI-8NW" secondAttribute="bottom" id="Ntd-ER-btt"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ogB-eI-8NW" secondAttribute="trailing" id="OdD-3o-cfa"/>
+                                    <constraint firstItem="ogB-eI-8NW" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Ywn-EL-rna" secondAttribute="top" id="dao-zL-6NG"/>
+                                    <constraint firstAttribute="centerY" secondItem="ogB-eI-8NW" secondAttribute="centerY" id="pwF-NJ-aRz"/>
                                 </constraints>
-                            </imageView>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="ogB-eI-8NW" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="kh9-bI-dsS" secondAttribute="leading" id="98L-Nt-siw"/>
-                            <constraint firstItem="ogB-eI-8NW" firstAttribute="top" relation="greaterThanOrEqual" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="IaY-Yi-HEf"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" relation="greaterThanOrEqual" secondItem="ogB-eI-8NW" secondAttribute="bottom" id="KDV-5b-Rpr"/>
-                            <constraint firstAttribute="centerY" secondItem="ogB-eI-8NW" secondAttribute="centerY" id="Yqg-cW-bRX"/>
-                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ogB-eI-8NW" secondAttribute="trailing" id="aue-wl-djI"/>
-                            <constraint firstItem="ogB-eI-8NW" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="eMa-KD-BCL"/>
-                            <constraint firstAttribute="centerX" secondItem="ogB-eI-8NW" secondAttribute="centerX" id="jXK-GN-l4e"/>
-                            <constraint firstAttribute="centerX" secondItem="ogB-eI-8NW" secondAttribute="centerX" id="m5G-UB-ZU8"/>
+                            <constraint firstAttribute="trailing" secondItem="Ywn-EL-rna" secondAttribute="trailing" id="Sug-lN-0aV"/>
+                            <constraint firstItem="Ywn-EL-rna" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="X6k-jE-kzJ"/>
+                            <constraint firstItem="Ywn-EL-rna" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="Zpq-46-vVj"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Ywn-EL-rna" secondAttribute="bottom" id="gVq-TX-GbJ"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="eMa-KD-BCL"/>
-                                <exclude reference="jXK-GN-l4e"/>
-                            </mask>
-                        </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="6nb-o5-0JB"/>
                     <connections>
+                        <outlet property="containerView" destination="Ywn-EL-rna" id="zkC-I1-bis"/>
                         <outlet property="imageView" destination="ogB-eI-8NW" id="f6D-ms-add"/>
                         <outlet property="ratioConstraint" destination="JTd-P2-AlY" id="2HS-5a-zGQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="882" y="383"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="sn4-vO-JOP">
+            <objects>
+                <navigationController id="NIv-Wh-O8p" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="9EO-NT-WeJ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="dtl-HD-yac"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2rb-BJ-Ntq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="13" y="383"/>
         </scene>
     </scenes>
     <resources>
